Closed
Bug 315578
Opened 20 years ago
Closed 20 years ago
Pause button disappears from customize sheet when download is in manager
Categories
(Camino Graveyard :: Downloading, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino1.0
People
(Reporter: graeme, Assigned: nick.kreeger)
Details
(Keywords: fixed1.8)
Attachments
(1 file)
|
1.80 KB,
patch
|
sfraser_bugs
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8) Gecko/20051107 Camino/1.0b1
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8) Gecko/20051107 Camino/1.0b1
The pause icon and title disappears from customize toolbar sheet when there is a download is in manager. It leave a blank space in it's place.
Reproducible: Always
Steps to Reproduce:
1. Make sure there is at least one download in the manager.
2. Show the toolbar customize toolbar sheet from the view menu.
Actual Results:
Icon and title disapper, but a space is left.
Expected Results:
Should be able to see the pause icon and title.
Updated•20 years ago
|
Comment 2•20 years ago
|
||
WFM
Comment 3•20 years ago
|
||
Here's what I do:
1. Download a file, any file.
2. When it's finished (I usually download something small), right click on the toolbar and select "Customize Toolbar"
3. Look to see the Pause icon.
It is gone. As soon as you "clear" the download view, it returns to the customize toolbar sheet.
Comment 4•20 years ago
|
||
This only happens if the download is selected in the downloads window. That is, if you command-click the download so it's unselected, the pause button reappears in the sheet. (noticed by Wevah)
Happens as early as 1.0a1 (possibly earlier)
Comment 5•20 years ago
|
||
This probably isn't a regression then. However, I'm going to leave the keyword until we know for sure. Can someone go back to when the pause/resume download patch first landed (August 3's nightly should have been the first to have it) and check if this problem exists?
Comment 6•20 years ago
|
||
This problem exists from the first nightly to contain the pause/resume download patch (2005080408).
| Assignee | ||
Comment 8•20 years ago
|
||
The problem is that since we get our groove on when swapping between pause and resume functionality that the buttons get validated in |setPauseResumeToolbarItem:| and right after a download completes, a download can no longer be paused or resumed, but that is what the customize dialog was going off of and set the items in the sheet accordingly.
This just sets the items as "pause" values except we don't hook a selector to it.
Assignee: mikepinkerton → nick.kreeger
Status: NEW → ASSIGNED
Updated•20 years ago
|
Attachment #202336 -
Flags: review+
landed on trunk and branch
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•