fix bug in which the pause button disappears when customizing the toolbar. b=315578 sr=smfr